width of dropdown changed to stop it jumping around screeen

--- a/app/assets/stylesheets/pages/_destinations.scss
+++ b/app/assets/stylesheets/pages/_destinations.scss
@@ -100,7 +100,7 @@ p, a {
   font-size: 16px !important;
 }
 .destination-entry {
-  width: 120px;
+  width: 140px;
   display: inline-table;
 }
 
